Pimcore Component requiers pimcore admin ui

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
   ],
   "require": {
     "pimcore/pimcore": "^11.0",
+    "pimcore/admin-ui-classic-bundle": "^1.0",
     "laminas/laminas-stdlib": "^3.6"
   },
   "require-dev": {
